--- a/public/index.html
+++ b/public/index.html
@@ -178,16 +178,20 @@
 
                         <div class="steps" id="overview">
                             <h4>On this page</h4>
-                            <ul>
-                                <li><a href="#step1">Make sure a trader is trustworthy</a></li>
-                                <li><a href="#step2">Buying from an auction</a></li>
-                                <li><a href="#step3">Check a car's history</a></li>
-                                <li><a href="#step4">Inspect the car and take a test drive</a></li>
-                                <li><a href="#step5">Get a written contract</a></li>
-                                <li><a href="#step6">When you buy the car</a></li>
-                                <li><a href="#step7">How to pay</a></li>
-                                <li><a href="#step8">Further help</a></li>
-                            </ul>
+                            <div class="flex-row">
+                                <ul class="flex-col-1-2">
+                                    <li><a href="#step1">Make sure a trader is trustworthy</a></li>
+                                    <li><a href="#step2">Buying from an auction</a></li>
+                                    <li><a href="#step3">Check a car's history</a></li>
+                                    <li><a href="#step4">Inspect the car and take a test drive</a></li>
+                                </ul>
+                                <ul class="flex-col-1-2">
+                                    <li><a href="#step5">If you’re still not sure - get an independent report</a></li>
+                                    <li><a href="#step6">When you buy the car</a></li>
+                                    <li><a href="#step7">How to pay</a></li>
+                                    <li><a href="#step8">Further help</a></li>
+                                </ul>
+                            </div>
                         </div>
 
                         <section id="step1">
@@ -324,7 +328,7 @@
 
                             <p>Never buy a car without the V5C certificate.</p>
 
-                            <div class="callout--warning">
+                            <div class="callout--alert">
                                 <p>The seller can’t legally transfer any car tax that they’ve already paid over to you (the rules around this changed recently). You’ll need to pay vehicle tax as soon as you buy the car. The seller will get a refund for any tax left on the car when it’s sold.</p>
                             </div>
                         </section>
@@ -334,7 +338,7 @@
 
                             <p>There are things to consider when deciding how to pay for a used car.</p>
 
-                            <div class="callout--warning">
+                            <div class="callout">
                                 <p>Think carefully before getting finance or a loan for a car. It can be an expensive way to pay, and you'll need to make sure you can realistically afford the repayments. Read advice on getting a finance from the Money Advice Service.</p>
                             </div>
 
@@ -414,11 +418,29 @@
 
                             <p>Contact the Citizens Advice consumer helpline on 03454 04 05 06 if you need more help - a trained adviser can give you advice over the phone and online.</p>
                         </section>
+
+                        <section id="step9" class="callout--responsible">
+                            <h2>Related content</h2>
+                            <div class="flex-row" style="padding:0;">
+                                <ul class="flex-col-1-2">
+                                    <li><a href="#step1">Make sure a trader is trustworthy</a></li>
+                                    <li><a href="#step2">Buying from an auction</a></li>
+                                    <li><a href="#step3">Check a car's history</a></li>
+                                    <li><a href="#step4">Inspect the car and take a test drive</a></li>
+                                </ul>
+                                <ul class="flex-col-1-2">
+                                    <li><a href="#step5">If you’re still not sure - get an independent report</a></li>
+                                    <li><a href="#step6">When you buy the car</a></li>
+                                    <li><a href="#step7">How to pay</a></li>
+                                    <li><a href="#step8">Further help</a></li>
+                                </ul>
+                            </div>
+                        </section>
                     </div>
                 </div><!-- END MAIN CONTENT -->
             </main>
 
-            <aside class="main-content__sidebar beta-extent-switcher hide-offline" data-track-zone="page-beta-extent-swticher" style="margin-bottom: 2rem;">
+            <aside class="main-content__sidebar beta-extent-switcher hide-offline" data-track-zone="page-beta-extent-swticher">
                 <h2 class="beta-extent-switcher__heading">This advice applies to England</h2>
 
                 <p>Advice can vary depending on where you live.</p>
@@ -447,18 +469,142 @@
             <nav class="side-nav" data-track-zone="side-nav" id="beta-dap-menu-accordion">
                 <ul class="beta-dap-menu-accordion__sections">
                     <li class="beta-dap-menu-accordion__section has-sub -active -open">
-                        <a class="beta-dap-menu-accordion__link">Builders and home improvements</a>
-
+                        <a class="beta-dap-menu-accordion__link">Cars and vehicles</a>
                         <ul class="beta-dap-menu-accordion__pages">
                             <li class="beta-dap-menu-accordion__page -current">
                                 <a class="beta-dap-menu-accordion__link" href="">Buying a used car</a>
                             </li>
-
                             <li class="beta-dap-menu-accordion__page">
-                                <a class="beta-dap-menu-accordion__link" href="">Problems with home improvements</a>
+                                <a class="beta-dap-menu-accordion__link" href="">Problem with a used car</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Problem with a car repair</a>
                             </li>
                         </ul>
                     </li>
+                    <li class="beta-dap-menu-accordion__section has-sub -open">
+                        <a class="beta-dap-menu-accordion__link">Related links</a>
+                        <ul class="beta-dap-menu-accordion__pages">
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">If you were pressured into buying something you didn’t want</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Claim compensation if something you bought causes damage or distress</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <!--<li class="beta-dap-menu-accordion__section has-sub">
+                        <a class="beta-dap-menu-accordion__link">Changing your mind about a purchase</a>
+                        <ul class="beta-dap-menu-accordion__pages">
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">If you were pressured into buying something you didn’t want</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Cancel something being paid for on hire-purchase</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Cancel a contract, membership or subscription</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Changing your mind about something you've bought</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="beta-dap-menu-accordion__section has-sub">
+                        <a class="beta-dap-menu-accordion__link">Problems with purchases</a>
+                        <ul class="beta-dap-menu-accordion__pages">
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">If your belongings have been damaged or lost by a dry cleaner</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Claim under a warranty or guarantee</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Claim compensation if something you bought causes damage or distress</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Problems with delivery</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Return faulty goods</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="beta-dap-menu-accordion__section has-sub">
+                        <a class="beta-dap-menu-accordion__link">Scams, counterfeits and stolen goods</a>
+                        <ul class="beta-dap-menu-accordion__pages">
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Report fake or counterfeit goodsr</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">If you think you've bought stolen goods</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Report to Trading Standards</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="beta-dap-menu-accordion__section has-sub">
+                        <a class="beta-dap-menu-accordion__link">Problems with phone, internet, downloads or TV</a>
+                        <ul class="beta-dap-menu-accordion__pages">
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Switch broadband, phone or TV provider</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Stop getting nuisance calls and texts</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Disputing a phone, internet or TV bill</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Problem with an app, software or download</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="beta-dap-menu-accordion__section has-sub">
+                        <a class="beta-dap-menu-accordion__link">Getting home improvements done</a>
+                        <ul class="beta-dap-menu-accordion__pages">
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Before you get building work done</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Problem with building work, decorating or home improvements</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="beta-dap-menu-accordion__section has-sub">
+                        <a class="beta-dap-menu-accordion__link">Holiday cancellations and compensation</a>
+                        <ul class="beta-dap-menu-accordion__pages">
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Claim compensation if your flight's delayed or cancelled</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Cancelling a holiday</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Claim compensation for a holiday</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="beta-dap-menu-accordion__section has-sub">
+                        <a class="beta-dap-menu-accordion__link">Get more help</a>
+                        <ul class="beta-dap-menu-accordion__pages">
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Contact the consumer helpline</a>
+                            </li>
+                            <li class="beta-dap-menu-accordion__page">
+                                <a class="beta-dap-menu-accordion__link" href="">Template letters</a>
+                            </li>
+                        </ul>
+                    </li>-->
+
                 </ul>
             </nav>
 
@@ -493,10 +639,11 @@
                         <li><a href="#step2">Buying from an auction</a></li>
                         <li><a href="#step3">Check a car's history</a></li>
                         <li><a href="#step4">Inspect the car and take a test drive</a></li>
-                        <li><a href="#step5">Get a written contract</a></li>
+                        <li><a href="#step5">If you’re still not sure - get an independent report</a></li>
                         <li><a href="#step6">When you buy the car</a></li>
                         <li><a href="#step7">How to pay</a></li>
                         <li><a href="#step8">Further help</a></li>
+                        <li><a href="#step9">Related content</a></li>
                     </ul>
                 </div>
             </nav>
@@ -510,7 +657,7 @@
 
                 <li class="steps--navigation--fixed__link"><span class="#step4"><strong>4</strong> Inspect the car and take a test drive</span></li>
 
-                <li class="steps--navigation--fixed__link"><span class="#step5"><strong>5</strong> Get a written contract</span></li>
+                <li class="steps--navigation--fixed__link"><span class="#step5"><strong>5</strong> If you’re still not sure - get an independent report</span></li>
 
                 <li class="steps--navigation--fixed__link"><span class="#step6"><strong>6</strong> When you buy the car</span></li>
 
@@ -541,7 +688,7 @@
                 </li>
 
                 <li class="steps--navigation--overlay__link">
-                    <a href="#step5"><strong>5</strong> Get a written contract</a>
+                    <a href="#step5"><strong>5</strong> If you’re still not sure - get an independent report</a>
                 </li>
 
                 <li class="steps--navigation--overlay__link">
