--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <meta content="EWS" name="cab-extent">
     <meta content="/static/images/apple-touch-icon.png">
     <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
-    <link href="css/site.css" media="screen" rel="stylesheet">
     <link href="css/main.css" media="screen" rel="stylesheet">
+    <link href="css/site.css" media="screen" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
@@ -176,8 +176,12 @@
 
                         <p>Doing the proper checks can help save you distress and money down the line.</p>
 
+                        <div class="callout--alert">
+                            <p>It’s worth knowing that you’ll still have legal rights even if you don’t do the proper checks. If there’s something wrong with your used car (eg it’s got a false mileage reading or it keeps breaking down), you may have a legal right to a repair, the cost of a repair, or some or all of your money back.</p>
+                        </div>
+
                         <div class="steps" id="overview">
-                            <h4>On this page</h4>
+                            <h3>On this page</h3>
                             <div class="flex-row">
                                 <ul class="flex-col-1-2">
                                     <li><a href="#step1">Make sure a trader is trustworthy</a></li>
@@ -237,7 +241,7 @@
                                 <li>make and model</li>
                             </ul>
 
-                            <p>Use the DVLA’s free online vehicle information checker to make sure what the seller tells you matches the DVLA’s records.</p>
+                            <p>Use the DVLA’s free <a href="#">online vehicle information checker</a> to make sure what the seller tells you matches the DVLA’s records.</p>
 
                             <p>If some of the minor details don’t match, you can ask the seller to clarify - it might be a simple mistake. But if you’re suspicious that the seller gave you fake details then you shouldn’t buy the car.</p>
 
@@ -249,7 +253,7 @@
 
                             <p>Vehicles need regular MOT tests to make sure they’re safe for the road. You should check that MOT tests have been done regularly throughout the car’s history (most cars over 3 years old need an MOT test every year).</p>
 
-                            <p>Check the MOT history of a car on GOV.UK. This is a free service.</p>
+                            <p>Check the <a href="#">MOT history of a car</a> on GOV.UK. This is a free service.</p>
 
                             <p>Ask the seller about any gaps in MOT - don’t continue with the deal if you’re suspicious of the MOT history. A car might not have needed an MOT if it was unused for a period of time and was registered as SORN (a Statutory Off Road Notification).</p>
 
@@ -272,13 +276,13 @@
                             <p>You can get a car history check from any of these websites that check vehicle details:</p>
 
                             <ul>
-                                <li>the AA</li>
+                                <li><a href="#">the AA</a></li>
 
-                                <li>the RAC</li>
+                                <li><a href="#">the RAC</a></li>
 
-                                <li>HPI</li>
+                                <li><a href="#">HPI</a></li>
 
-                                <li>Autotrader</li>
+                                <li><a href="#">Autotrader</a></li>
                             </ul>
                         </section>
 
@@ -287,7 +291,7 @@
 
                             <p>You should arrange to view the car in daylight, preferably when it’s dry - it’s harder to spot damage to the car if it’s wet. It’s a good idea to meet at a private seller’s house so that if something goes wrong after you’ve bought the car you’ll have a record of their address.</p>
 
-                            <p>The AA has a useful checklist for what to look out for when inspecting a used car and its paperwork. Make sure you ask about the car’s service history.</p>
+                            <p>The AA has a <a href="#">useful checklist</a> for what to look out for when inspecting a used car and its paperwork. Make sure you ask about the car’s service history.</p>
 
                             <p>You should definitely take the car for a test drive. You’ll need to make sure you’re insured to do this. If you have your own car insurance, check with your insurance company to see if you can drive someone else’s car. If you don’t have insurance, a trader or private seller’s insurance might cover you - you’ll need to ask them.</p>
 
@@ -295,7 +299,7 @@
                                 <p>Don’t test drive a car if you’re not insured. You’ll be liable for any damage you cause and you could lose points on your licence.</p>
                             </div>
 
-                            <p>Drive for at least 15 minutes on different types of road. The AA has a checklist for what to look out for when taking a test drive.</p>
+                            <p>Drive for at least 15 minutes on different types of road. The AA has a <a href="#">checklist for what to look out for when taking a test drive</a>.</p>
                         </section>
 
                         <section id="step5">
@@ -316,7 +320,7 @@
 
                             <p>Don’t be afraid to haggle on the price - start low and let the seller work the price up. Stay calm and only pay what you can afford. Remember you can simply stop the deal if you feel like you’re being pressured into paying too much or buying additional features.</p>
 
-                            <p>The Money Advice Service has useful guidance on how to negotiate when buying a car.</p>
+                            <p>The Money Advice Service has useful guidance on <a href="#">how to negotiate when buying a car</a>.</p>
 
                             <p>Make sure you get the original (not a photocopy) of:</p>
 
@@ -329,7 +333,7 @@
                             <p>Never buy a car without the V5C certificate.</p>
 
                             <div class="callout--alert">
-                                <p>The seller can’t legally transfer any car tax that they’ve already paid over to you (the rules around this changed recently). You’ll need to pay vehicle tax as soon as you buy the car. The seller will get a refund for any tax left on the car when it’s sold.</p>
+                                <p>The seller can’t legally transfer any car tax that they’ve already paid over to you (the rules around this changed recently). You’ll need to <a href="#">pay vehicle tax</a> as soon as you buy the car. The seller will get a refund for any tax left on the car when it’s sold.</p>
                             </div>
                         </section>
 
@@ -339,7 +343,7 @@
                             <p>There are things to consider when deciding how to pay for a used car.</p>
 
                             <div class="callout">
-                                <p>Think carefully before getting finance or a loan for a car. It can be an expensive way to pay, and you'll need to make sure you can realistically afford the repayments. Read advice on getting a finance from the Money Advice Service.</p>
+                                <p>Think carefully before getting finance or a loan for a car. It can be an expensive way to pay, and you'll need to make sure you can realistically afford the repayments. Read <a href="#">advice on getting a finance from the Money Advice Service</a>.</p>
                             </div>
 
                             <h3>If you pay by cash</h3>
@@ -410,30 +414,26 @@
                                 <li>the car can be repossessed if you can’t keep up the payments</li>
                             </ul>
 
-                            <p>For more advice on whether a hire purchase arrangement would suit you read buying a car through hire purchase by the Money Advice Service.</p>
+                            <p>For more advice on whether a hire purchase arrangement would suit you read <a href="#">buying a car through hire purchase</a> by the Money Advice Service.</p>
                         </section>
 
                         <section id="step8">
                             <h2>Further help</h2>
 
-                            <p>Contact the Citizens Advice consumer helpline on 03454 04 05 06 if you need more help - a trained adviser can give you advice over the phone and online.</p>
+                            <p>Contact the <a href="#">Citizens Advice consumer helpline</a> on 03454 04 05 06 if you need more help - a trained adviser can give you advice over the phone and online.</p>
+
+                            <div class="callout--alert">
+                                <p>If there’s a problem with your used car after you buy it, you have certain legal rights.</p>
+                            </div>
                         </section>
 
-                        <section id="step9" class="callout--responsible">
-                            <h2>Related content</h2>
-                            <div class="flex-row" style="padding:0;">
-                                <ul class="flex-col-1-2">
-                                    <li><a href="#step1">Make sure a trader is trustworthy</a></li>
-                                    <li><a href="#step2">Buying from an auction</a></li>
-                                    <li><a href="#step3">Check a car's history</a></li>
-                                    <li><a href="#step4">Inspect the car and take a test drive</a></li>
-                                </ul>
-                                <ul class="flex-col-1-2">
-                                    <li><a href="#step5">If you’re still not sure - get an independent report</a></li>
-                                    <li><a href="#step6">When you buy the car</a></li>
-                                    <li><a href="#step7">How to pay</a></li>
-                                    <li><a href="#step8">Further help</a></li>
-                                </ul>
+                        <section id="step9">
+                            <div class="related-content">
+                                <h3>Related content</h3>
+                                    <ul>
+                                        <li><a href="#">Make sure a trader is trustworthy</a></li>
+                                        <li><a href="#">Buying from an auction</a></li>
+                                    </ul>
                             </div>
                         </section>
                     </div>
@@ -479,17 +479,6 @@
                             </li>
                             <li class="beta-dap-menu-accordion__page">
                                 <a class="beta-dap-menu-accordion__link" href="">Problem with a car repair</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="beta-dap-menu-accordion__section has-sub -open">
-                        <a class="beta-dap-menu-accordion__link">Related links</a>
-                        <ul class="beta-dap-menu-accordion__pages">
-                            <li class="beta-dap-menu-accordion__page">
-                                <a class="beta-dap-menu-accordion__link" href="">If you were pressured into buying something you didn’t want</a>
-                            </li>
-                            <li class="beta-dap-menu-accordion__page">
-                                <a class="beta-dap-menu-accordion__link" href="">Claim compensation if something you bought causes damage or distress</a>
                             </li>
                         </ul>
                     </li>
@@ -633,7 +622,7 @@
 
             <nav class="side-nav">
                 <div class="steps--navigation">
-                    <a href="#overview" class="title"><h4>On this page</h4></a>
+                    <a href="#overview" class="title"><h3>On this page</h3></a>
                     <ul>
                         <li><a href="#step1">Make sure a trader is trustworthy</a></li>
                         <li><a href="#step2">Buying from an auction</a></li>
@@ -643,7 +632,6 @@
                         <li><a href="#step6">When you buy the car</a></li>
                         <li><a href="#step7">How to pay</a></li>
                         <li><a href="#step8">Further help</a></li>
-                        <li><a href="#step9">Related content</a></li>
                     </ul>
                 </div>
             </nav>
