Changed related content links in consumer side-nav

--- a/research/consumer/side-nav/public/index.html
+++ b/research/consumer/side-nav/public/index.html
@@ -431,8 +431,8 @@
                             <div class="related-content">
                                 <h3>Related content</h3>
                                     <ul>
-                                        <li><a href="#">Make sure a trader is trustworthy</a></li>
-                                        <li><a href="#">Buying from an auction</a></li>
+                                        <li><a href="#">Problem with a used car</a></li>
+                                        <li><a href="#">Problem with a car repair</a></li>
                                     </ul>
                             </div>
                         </section>
